@@ -108,3 +108,38 @@ set_invisible border_e
 set_invisible border_sw
 set_invisible border_s
 set_invisible border_se
+
+commandlist command_ground_reset OR
+commandlist_add command_ground_reset floor0 SCROLL_RESET
+commandlist_add command_ground_reset floor1 SCROLL_RESET
+commandlist_add command_ground_reset floor2 SCROLL_RESET
+commandlist_add command_ground_reset floor3 SCROLL_RESET
+commandlist_add command_ground_reset floor4 SCROLL_RESET
+commandlist_add command_ground_reset floor5 SCROLL_RESET
+commandlist_add command_ground_reset floor6 SCROLL_RESET
+commandlist_add command_ground_reset floor7 SCROLL_RESET
+commandlist_add command_ground_reset floor8 SCROLL_RESET
+commandlist_add command_ground_reset floor9 SCROLL_RESET
+commandlist_add command_ground_reset floor10 SCROLL_RESET
+commandlist_add command_ground_reset floor11 SCROLL_RESET
+commandlist_add command_ground_reset floor12 SCROLL_RESET
+commandlist_add command_ground_reset floor13 SCROLL_RESET
+commandlist_add command_ground_reset floor14 SCROLL_RESET
+commandlist_add command_ground_reset floor15 SCROLL_RESET
+commandlist_add command_ground_reset floor16 SCROLL_RESET
+commandlist_add command_ground_reset floor17 SCROLL_RESET
+commandlist_add command_ground_reset floor18 SCROLL_RESET
+commandlist_add command_ground_reset floor19 SCROLL_RESET
+commandlist_add command_ground_reset floor20 SCROLL_RESET
+commandlist_add command_ground_reset floor21 SCROLL_RESET
+commandlist_add command_ground_reset floor22 SCROLL_RESET
+commandlist_add command_ground_reset floor23 SCROLL_RESET
+commandlist_add command_ground_reset floor24 SCROLL_RESET
+commandlist_add command_ground_reset floor25 SCROLL_RESET
+commandlist_add command_ground_reset floor26 SCROLL_RESET
+commandlist_add command_ground_reset floor27 SCROLL_RESET
+commandlist_add command_ground_reset floor28 SCROLL_RESET
+commandlist_add command_ground_reset floor29 SCROLL_RESET
+commandlist_add command_ground_reset floor30 SCROLL_RESET
+event connect command_ground_reset
+event mapscroll command_ground_reset
