@@ -188,3 +188,57 @@ commandlist_add command_inventory_down inv56 SCROLL 15
 commandlist_add command_inventory_down inv57 SCROLL 15
 commandlist_add command_inventory_down inv58 SCROLL 15
 commandlist_add command_inventory_down inv59 SCROLL 15
+
+commandlist command_inventory_reset OR
+commandlist_add command_inventory_reset inv0 SCROLL_RESET
+commandlist_add command_inventory_reset inv1 SCROLL_RESET
+commandlist_add command_inventory_reset inv2 SCROLL_RESET
+commandlist_add command_inventory_reset inv3 SCROLL_RESET
+commandlist_add command_inventory_reset inv4 SCROLL_RESET
+commandlist_add command_inventory_reset inv5 SCROLL_RESET
+commandlist_add command_inventory_reset inv6 SCROLL_RESET
+commandlist_add command_inventory_reset inv7 SCROLL_RESET
+commandlist_add command_inventory_reset inv8 SCROLL_RESET
+commandlist_add command_inventory_reset inv9 SCROLL_RESET
+commandlist_add command_inventory_reset inv10 SCROLL_RESET
+commandlist_add command_inventory_reset inv11 SCROLL_RESET
+commandlist_add command_inventory_reset inv12 SCROLL_RESET
+commandlist_add command_inventory_reset inv13 SCROLL_RESET
+commandlist_add command_inventory_reset inv14 SCROLL_RESET
+commandlist_add command_inventory_reset inv15 SCROLL_RESET
+commandlist_add command_inventory_reset inv16 SCROLL_RESET
+commandlist_add command_inventory_reset inv17 SCROLL_RESET
+commandlist_add command_inventory_reset inv18 SCROLL_RESET
+commandlist_add command_inventory_reset inv19 SCROLL_RESET
+commandlist_add command_inventory_reset inv20 SCROLL_RESET
+commandlist_add command_inventory_reset inv21 SCROLL_RESET
+commandlist_add command_inventory_reset inv22 SCROLL_RESET
+commandlist_add command_inventory_reset inv23 SCROLL_RESET
+commandlist_add command_inventory_reset inv24 SCROLL_RESET
+commandlist_add command_inventory_reset inv25 SCROLL_RESET
+commandlist_add command_inventory_reset inv26 SCROLL_RESET
+commandlist_add command_inventory_reset inv27 SCROLL_RESET
+commandlist_add command_inventory_reset inv28 SCROLL_RESET
+commandlist_add command_inventory_reset inv29 SCROLL_RESET
+commandlist_add command_inventory_reset inv30 SCROLL_RESET
+commandlist_add command_inventory_reset inv40 SCROLL_RESET
+commandlist_add command_inventory_reset inv41 SCROLL_RESET
+commandlist_add command_inventory_reset inv42 SCROLL_RESET
+commandlist_add command_inventory_reset inv43 SCROLL_RESET
+commandlist_add command_inventory_reset inv44 SCROLL_RESET
+commandlist_add command_inventory_reset inv45 SCROLL_RESET
+commandlist_add command_inventory_reset inv46 SCROLL_RESET
+commandlist_add command_inventory_reset inv47 SCROLL_RESET
+commandlist_add command_inventory_reset inv48 SCROLL_RESET
+commandlist_add command_inventory_reset inv49 SCROLL_RESET
+commandlist_add command_inventory_reset inv50 SCROLL_RESET
+commandlist_add command_inventory_reset inv51 SCROLL_RESET
+commandlist_add command_inventory_reset inv52 SCROLL_RESET
+commandlist_add command_inventory_reset inv53 SCROLL_RESET
+commandlist_add command_inventory_reset inv54 SCROLL_RESET
+commandlist_add command_inventory_reset inv55 SCROLL_RESET
+commandlist_add command_inventory_reset inv56 SCROLL_RESET
+commandlist_add command_inventory_reset inv57 SCROLL_RESET
+commandlist_add command_inventory_reset inv58 SCROLL_RESET
+commandlist_add command_inventory_reset inv59 SCROLL_RESET
+event connect command_inventory_reset
