@@ -16,3 +16,6 @@ command_text command 4 200-4-16 578 24   command_active command_inactive font_la
 
 commandlist_add command_messages_up log SCROLL -1
 commandlist_add command_messages_down log SCROLL 1
+
+commandlist command_messages_reset OR log SCROLL_RESET
+event connect command_messages_reset
