@@ -34,6 +34,11 @@ import java.util.List;
 public class GUIItemFloor extends GUIItemItem
 {
     /**
+     * The default scroll index.
+     */
+    private final int defaultIndex;
+
+    /**
      * The currently shown index. It is the item's index for ground view, and
      * +1 for container view; index 0 for container view is the container
      * itself.
@@ -84,6 +89,7 @@ public class GUIItemFloor extends GUIItemItem
     public GUIItemFloor(final JXCWindow jxcWindow, final String name, final int x, final int y, final int w, final int h, final BufferedImage image, final BufferedImage cursedImage, final BufferedImage appliedImage, final BufferedImage selectorImage, final BufferedImage lockedImage, final int index, final CrossfireServerConnection crossfireServerConnection, final Font font, final Color nrofColor)
     {
         super(jxcWindow, name, x, y, w, h, image, cursedImage, appliedImage, selectorImage, lockedImage, crossfireServerConnection, font, nrofColor);
+        defaultIndex = index;
         containerTag = ItemsList.getItemsManager().getCurrentFloorManager().getCurrentFloor();
         ItemsList.getItemsManager().getCurrentFloorManager().addCurrentFloorListener(currentFloorListener);
         setIndex(index, containerTag, false);
@@ -111,6 +117,12 @@ public class GUIItemFloor extends GUIItemItem
     @Override public void scroll(final int distance)
     {
         setIndex(index+distance, containerTag, false);
+    }
+
+    /* {@inheritDoc} */
+    public void resetScroll()
+    {
+        setIndex(defaultIndex, containerTag, false);
     }
 
     /* {@inheritDoc} */
