@@ -33,6 +33,11 @@ import java.util.List;
 
 public class GUIItemInventory extends GUIItemItem
 {
+    /**
+     * The default scroll index.
+     */
+    private final int defaultIndex;
+
     private int myindex = -1;
 
     /**
@@ -52,6 +57,7 @@ public class GUIItemInventory extends GUIItemItem
     public GUIItemInventory(final JXCWindow jxcWindow, final String name, final int x, final int y, final int w, final int h, final BufferedImage image, final BufferedImage cursedImage, final BufferedImage appliedImage, final BufferedImage selectorImage, final BufferedImage lockedImage, final int index, final CrossfireServerConnection crossfireServerConnection, final Font font, final Color nrofColor)
     {
         super(jxcWindow, name, x, y, w, h, image, cursedImage, appliedImage, selectorImage, lockedImage, crossfireServerConnection, font, nrofColor);
+        defaultIndex = index;
         setIndex(index);
         render();
     }
@@ -85,6 +91,12 @@ public class GUIItemInventory extends GUIItemItem
     {
         setIndex(myindex+distance);
         render();
+    }
+
+    /* {@inheritDoc} */
+    public void resetScroll()
+    {
+        setIndex(defaultIndex);
     }
 
     /* {@inheritDoc} */
