@@ -32,6 +32,11 @@ import java.util.List;
 
 public class GUIItemSpelllist extends GUIItem
 {
+    /**
+     * The default scroll index.
+     */
+    private final int defaultIndex;
+
     private Spell myspell = null;
 
     private int myindex = -1;
@@ -72,6 +77,7 @@ public class GUIItemSpelllist extends GUIItem
     public GUIItemSpelllist(final JXCWindow jxcWindow, final String name, final int x, final int y, final int w, final int h, final BufferedImage image, final BufferedImage cursedImage, final BufferedImage appliedImage, final BufferedImage selectorImage, final BufferedImage lockedImage, final int index, final CrossfireServerConnection crossfireServerConnection, final Font font)
     {
         super(jxcWindow, name, x, y, w, h, image, cursedImage, appliedImage, selectorImage, lockedImage, crossfireServerConnection, font);
+        this.defaultIndex = index;
         setIndex(index);
         ItemsList.getSpellsManager().addCrossfireSpellChangedListener(crossfireSpellChangedListener);
         render();
@@ -100,6 +106,12 @@ public class GUIItemSpelllist extends GUIItem
     {
         setIndex(myindex+distance);
         render();
+    }
+
+    /* {@inheritDoc} */
+    public void resetScroll()
+    {
+        setIndex(defaultIndex);
     }
 
     /* {@inheritDoc} */
